--- a/app/templates/quality_control/qc_saved.html
+++ b/app/templates/quality_control/qc_saved.html
@@ -134,7 +134,7 @@ $(document).ready(function() {
 			})
 		});
 		$('#control1').empty();
-		$.getJSON($SCRIPT_ROOT + '/update_control_list', {
+		$.getJSON($SCRIPT_ROOT + '/update_control_lot_list', {
 			machine_id : $('#qcrf_machine').val(), 
 			company_id : {{ company.id }}, 
 			analyte_id : $(this).val(),
@@ -146,7 +146,7 @@ $(document).ready(function() {
 			
 		});
 		$('#control2').empty();
-		$.getJSON($SCRIPT_ROOT + '/update_control_list', {
+		$.getJSON($SCRIPT_ROOT + '/update_control_lot_list', {
 			machine_id : $('#qcrf_machine').val(), 
 			company_id : {{ company.id }}, 
 			analyte_id : $(this).val(),
@@ -158,7 +158,7 @@ $(document).ready(function() {
 			
 		});
 		$('#control3').empty();
-		$.getJSON($SCRIPT_ROOT + '/update_control_list', {
+		$.getJSON($SCRIPT_ROOT + '/update_control_lot_list', {
 			machine_id : $('#qcrf_machine').val(), 
 			company_id : {{ company.id }}, 
 			analyte_id : $(this).val(),
@@ -186,7 +186,7 @@ $(document).ready(function() {
 		});*/
 		
 		$('#control1').empty();
-		$.getJSON($SCRIPT_ROOT + '/update_control_list', {
+		$.getJSON($SCRIPT_ROOT + '/update_control_lot_list', {
 			company_id : {{ company.id }}, 
 			analyte_id : $('#qcrf_analyte').val(),
 			machine_id : $('#qcrf_machine').val(), 
@@ -198,7 +198,7 @@ $(document).ready(function() {
 			
 		});
 		$('#control2').empty();
-		$.getJSON($SCRIPT_ROOT + '/update_control_list', {
+		$.getJSON($SCRIPT_ROOT + '/update_control_lot_list', {
 			company_id : {{ company.id }}, 
 			analyte_id : $('#qcrf_analyte').val(),
 			machine_id : $('#qcrf_machine').val(), 
@@ -210,7 +210,7 @@ $(document).ready(function() {
 			
 		});
 		$('#control3').empty();
-		$.getJSON($SCRIPT_ROOT + '/update_control_list', {
+		$.getJSON($SCRIPT_ROOT + '/update_control_lot_list', {
 			company_id : {{ company.id }}, 
 			analyte_id : $('#qcrf_analyte').val(),
 			machine_id : $('#qcrf_machine').val(), 
