--- a/app/templates/quality_control/qc_results_edit.html
+++ b/app/templates/quality_control/qc_results_edit.html
@@ -118,9 +118,9 @@ $(document).ready(function() {
 	$('#eqcrf_submit').removeClass('btn-default').addClass('btn-primary');
 	$('#eqcrf_delete').removeClass('btn-default').addClass('btn-danger');
 	
-	/*if ($('#eqcrf_validate').is('checked' == 'true') ){
+	if ($('#eqcrf_validate').is('checked' == 'true') ){
 		$('#eqcrf_delete').css('display', 'inline-block');
-	}*/
+	}
 	$('#eqcrf_validate_delete').change(function() {
 		if ($(this).is(':checked')) {
 			$('#eqcrf_delete').css('display', 'inline-block');
