--- a/app/templates/quality_control/qc_results_edit.html
+++ b/app/templates/quality_control/qc_results_edit.html
@@ -119,7 +119,8 @@ $(document).ready(function() {
 		//"pagingType": "full_numbers",
 		"paging": false,
 		"searching": false,
-		 "info": false,
+		"info": false,
+		"order": [[ 0, "desc" ]]
 	 });
 	 
 	 
