--- a/app/templates/quality_control/qc_results.html
+++ b/app/templates/quality_control/qc_results.html
@@ -1123,7 +1123,7 @@ $(window).load(function() {
 				vAxes: {
 					0: {title: '',
 						baseline: 0,
-						ticks: [{v: 3, f: ''}, {v: 2, f: ''}, {v: 1, f: ''}, {v: 0, f: 'mean'}, {v: -1, f: ''}, {v: -2, f: ''}, {v: -3, f: ''}],
+						ticks: [{v: 3, f: ''}, {v: 2, f: ''}, {v: 1, f: ''}, {v: 0, f: 'lab mean'}, {v: -1, f: ''}, {v: -2, f: ''}, {v: -3, f: ''}],
 						minValue: -3,
 						maxValue: 3,
 						//viewWindowMode: 'maximized',
