--- a/app/templates/quality_control/qc_results_edit.html
+++ b/app/templates/quality_control/qc_results_edit.html
@@ -61,7 +61,8 @@
 					<th class="col-md-1">Action</th>
 				</tr>
 			</thead>
-			<tbody>
+			<tbody></tbody>
+			<!--tbody>
 				{% for qc in comp_qc_results %}
 				<tr class="qc_results_data_row">
 					<td>{{ qc.run_date }}</td>
@@ -73,7 +74,7 @@
 					<td><button type="button" class="btn btn-primary btn-sm" title="Edit/Delete" data-toggle="modal" data-target="#edit_qc_results_modal" data-result-id="{{ qc.id }}" data-run-date="{{ qc.run_date }}" data-qc-result="{{ qc.qc_result }}" data-machine="{{ qc.machine.id }}" data-analyte="{{ qc.analyte.id }}" data-reagent-lot="{{ qc.reagent_lot.id }}" data-control-lot="{{ qc.control_lot.id }}" {% if qc.comment %} data-comment="{{ qc.comment }}" {% endif %} {% if qc.rejected %}data-rejected="{{ qc.rejected }}" {% endif %}><span class="glyphicon glyphicon-pencil" aria-hidden="true" style="margin-right: 2px;"></span><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></button></td>
 				</tr>
 				{% endfor %}
-			</tbody>
+			</tbody-->
 		</table>
 	</div>
 </div>
@@ -110,20 +111,19 @@
 <script>
 
 $(document).ready(function() {
-	$('select#machine_select').quicksearch('table#edit_qc_results_table .qc_results_data_row');
+	/*$('select#machine_select').quicksearch('table#edit_qc_results_table .qc_results_data_row');
 	$('select#analyte_select').quicksearch('table#edit_qc_results_table .qc_results_data_row');
 	$('select#rgt_lot_select').quicksearch('table#edit_qc_results_table .qc_results_data_row');
-	$('select#ctrl_lot_select').quicksearch('table#edit_qc_results_table .qc_results_data_row');
+	$('select#ctrl_lot_select').quicksearch('table#edit_qc_results_table .qc_results_data_row');*/
 	
-	 $('#edit_qc_results_table').DataTable({
-		//"pagingType": "full_numbers",
+	 /*$('#edit_qc_results_table').DataTable({
+		"pagingType": "full_numbers",
 		"paging": false,
 		"searching": false,
 		"info": false,
 		"order": [[ 0, "desc" ]]
-	 });
-	 
-	 
+	 });*/
+		 
 
 	$('#eqcrf_submit').removeClass('btn-default').addClass('btn-primary');
 	$('#eqcrf_delete').removeClass('btn-default').addClass('btn-danger');
@@ -255,9 +255,19 @@ $(document).ready(function() {
 			$.each(data.result, function(i, new_options){
 				$('#analyte_select').append($('<option></option>').attr({value: new_options[1], "data-analyte_id":new_options[0]}).text(new_options[1]) );
 			})
-			
-		});
 		return false;
+		});
+		$('#edit_qc_results_table tbody').empty();
+		$.getJSON($SCRIPT_ROOT + '/get_qc_results', {
+			company_id : {{ company.id }}, 
+			machine_id : $('#machine_select option:selected').data('machine_id'),
+		}, function(data){
+			$.each(data.result, function(i, new_options){
+				$('#edit_qc_results_table tbody').append($('<tr class="qc_results_data_row"><td>' + data.result[i]["run_date"] + '</td><td>' + data.result[i]["qc_result"] + '</td><td>' + data.result[i]["machine_name"] + '</td><td>' + data.result[i]["analyte_name"] + '</td><td>' + data.result[i]["reagent_lot"] + '</td><td>' + data.result[i]["control_lot"] + '</td><td><button type="button" class="btn btn-primary btn-sm" title="Edit/Delete" data-toggle="modal" data-target="#edit_qc_results_modal" data-result-id="' + data.result[i]["id"] + '" data-run-date="' + data.result[i]["run_date"] + '" data-qc-result="' + data.result[i]["qc_result"] + '" data-machine="' + data.result[i]["machine_id"] + '" data-analyte="' + data.result[i]["analyte_id"] + '" data-reagent-lot="' + data.result[i]["reagent_lot_id"] + '" data-control-lot="' + data.result[i]["control_lot_id"] + '" data-comment="' + data.result[i]["comment"] + '"  data-rejected="' + data.result[i]["rejected"] + '"><span class="glyphicon glyphicon-pencil" aria-hidden="true" style="margin-right: 2px;"></span><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></button></td></tr>'));
+			})
+		return false;
+		});
+		
 	});
 	
 	$('#analyte_select').change(function(){
@@ -280,9 +290,19 @@ $(document).ready(function() {
 			$.each(data.result, function(i, new_options){
 				$('#ctrl_lot_select').append($('<option></option>').attr({value: new_options[1], "data-ctrl_lot_id":new_options[0]}).text(new_options[1]) );
 			})
-			
+			return false;
 		});
+		$('#edit_qc_results_table tbody').empty();
+		$.getJSON($SCRIPT_ROOT + '/get_qc_results', {
+			company_id : {{ company.id }}, 
+			machine_id : $('#machine_select option:selected').data('machine_id'),
+			analyte_id : $('#analyte_select option:selected').data('analyte_id'),
+		}, function(data){
+			$.each(data.result, function(i, new_options){
+				$('#edit_qc_results_table tbody').append($('<tr class="qc_results_data_row"><td>' + data.result[i]["run_date"] + '</td><td>' + data.result[i]["qc_result"] + '</td><td>' + data.result[i]["machine_name"] + '</td><td>' + data.result[i]["analyte_name"] + '</td><td>' + data.result[i]["reagent_lot"] + '</td><td>' + data.result[i]["control_lot"] + '</td><td><button type="button" class="btn btn-primary btn-sm" title="Edit/Delete" data-toggle="modal" data-target="#edit_qc_results_modal" data-result-id="' + data.result[i]["id"] + '" data-run-date="' + data.result[i]["run_date"] + '" data-qc-result="' + data.result[i]["qc_result"] + '" data-machine="' + data.result[i]["machine_id"] + '" data-analyte="' + data.result[i]["analyte_id"] + '" data-reagent-lot="' + data.result[i]["reagent_lot_id"] + '" data-control-lot="' + data.result[i]["control_lot_id"] + '" data-comment="' + data.result[i]["comment"] + '"  data-rejected="' + data.result[i]["rejected"] + '"><span class="glyphicon glyphicon-pencil" aria-hidden="true" style="margin-right: 2px;"></span><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></button></td></tr>'));
+			})
 		return false;
+		});
 	});
 	
 	$('#rgt_lot_select').change(function(){
@@ -296,12 +316,25 @@ $(document).ready(function() {
 			$.each(data.result, function(i, new_options){
 				$('#ctrl_lot_select').append($('<option></option>').attr({value: new_options[1], "data-ctrl_lot_id":new_options[0]}).text(new_options[1]) );
 			})
+			return false;
 		});
+		
+		$('#edit_qc_results_table tbody').empty();
+		$.getJSON($SCRIPT_ROOT + '/get_qc_results', {
+			company_id : {{ company.id }}, 
+			machine_id : $('#machine_select option:selected').data('machine_id'),
+			analyte_id : $('#analyte_select option:selected').data('analyte_id'),
+			rgt_lot_id : $('#rgt_lot_select option:selected').data('rgt_lot_id'),
+		}, function(data){
+			$.each(data.result, function(i, new_options){
+				$('#edit_qc_results_table tbody').append($('<tr class="qc_results_data_row"><td>' + data.result[i]["run_date"] + '</td><td>' + data.result[i]["qc_result"] + '</td><td>' + data.result[i]["machine_name"] + '</td><td>' + data.result[i]["analyte_name"] + '</td><td>' + data.result[i]["reagent_lot"] + '</td><td>' + data.result[i]["control_lot"] + '</td><td><button type="button" class="btn btn-primary btn-sm" title="Edit/Delete" data-toggle="modal" data-target="#edit_qc_results_modal" data-result-id="' + data.result[i]["id"] + '" data-run-date="' + data.result[i]["run_date"] + '" data-qc-result="' + data.result[i]["qc_result"] + '" data-machine="' + data.result[i]["machine_id"] + '" data-analyte="' + data.result[i]["analyte_id"] + '" data-reagent-lot="' + data.result[i]["reagent_lot_id"] + '" data-control-lot="' + data.result[i]["control_lot_id"] + '" data-comment="' + data.result[i]["comment"] + '"  data-rejected="' + data.result[i]["rejected"] + '"><span class="glyphicon glyphicon-pencil" aria-hidden="true" style="margin-right: 2px;"></span><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></button></td></tr>'));
+			})
 		return false;
+		});
 	});
 	
 	$('#ctrl_lot_select').change(function() {
-		$('#rgt_lot_select').empty();
+		/*$('#rgt_lot_select').empty();
 		$.getJSON($SCRIPT_ROOT + '/update_rlot_list', {
 			company_id : {{ company.id }}, 
 			analyte_id : $('#analyte_select option:selected').data('analyte_id'),
@@ -309,6 +342,20 @@ $(document).ready(function() {
 			$.each(data.result, function(i, new_options){
 				$('#rgt_lot_select').append($('<option></option>').attr({value: new_options[1], "data-rgt_lot_id":new_options[0]}).text(new_options[1]) );
 			})
+			return false;
+		});*/
+		$('#edit_qc_results_table tbody').empty();
+		$.getJSON($SCRIPT_ROOT + '/get_qc_results', {
+			company_id : {{ company.id }}, 
+			machine_id : $('#machine_select option:selected').data('machine_id'),
+			analyte_id : $('#analyte_select option:selected').data('analyte_id'),
+			rgt_lot_id : $('#rgt_lot_select option:selected').data('rgt_lot_id'),
+			ctrl_lot_id : $('#ctrl_lot_select option:selected').data('ctrl_lot_id'),
+		}, function(data){
+			$.each(data.result, function(i, new_options){
+				$('#edit_qc_results_table tbody').append($('<tr class="qc_results_data_row"><td>' + data.result[i]["run_date"] + '</td><td>' + data.result[i]["qc_result"] + '</td><td>' + data.result[i]["machine_name"] + '</td><td>' + data.result[i]["analyte_name"] + '</td><td>' + data.result[i]["reagent_lot"] + '</td><td>' + data.result[i]["control_lot"] + '</td><td><button type="button" class="btn btn-primary btn-sm" title="Edit/Delete" data-toggle="modal" data-target="#edit_qc_results_modal" data-result-id="' + data.result[i]["id"] + '" data-run-date="' + data.result[i]["run_date"] + '" data-qc-result="' + data.result[i]["qc_result"] + '" data-machine="' + data.result[i]["machine_id"] + '" data-analyte="' + data.result[i]["analyte_id"] + '" data-reagent-lot="' + data.result[i]["reagent_lot_id"] + '" data-control-lot="' + data.result[i]["control_lot_id"] + '" data-comment="' + data.result[i]["comment"] + '"  data-rejected="' + data.result[i]["rejected"] + '"><span class="glyphicon glyphicon-pencil" aria-hidden="true" style="margin-right: 2px;"></span><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></button></td></tr>'));
+			})
+		return false;
 		});
 	});
 });
