--- a/app/templates/quality_control/qc_saved.html
+++ b/app/templates/quality_control/qc_saved.html
@@ -43,6 +43,7 @@
 				<br>
 				{{ form.control1.label (class_="control-label")}}
 				{{ form.control1 (class_="form-control")}}
+				<div id="qc_1_run_date"></div>
 			</div>
 			<div class="col-md-4">
 				{{ form.qcrf_analyte.label (class_="control-label")}}
@@ -50,6 +51,7 @@
 				<br>
 				{{ form.control2.label (class_="control-label")}}
 				{{ form.control2 (class_="form-control")}}
+				<div id="qc_2_run_date"></div>
 			</div>
 			<div class="col-md-4">
 				{{ form.qcrf_reagent_lot.label (class_="control-label")}}
@@ -57,6 +59,7 @@
 				<br>
 				{{ form.control3.label (class_="control-label")}}
 				{{ form.control3 (class_="form-control")}}
+				<div id="qc_3_run_date"></div>
 			</div>
 			<div>
 				<div class="col-md-3">
@@ -215,10 +218,26 @@ $(document).ready(function() {
 			company_id : {{ company.id }}, 
 			analyte_id : $('#qcrf_analyte').val(),
 			machine_id : $('#qcrf_machine').val(), 
-			rlot_id : $(this).val()
+			rlot_id : $('#qcrf_reagent_lot').val()
 		}, function(data){
 			$.each(data.result, function(i, new_options){
 				$('#control3').append($('<option></option>').attr("value", new_options[0]).text(new_options[1]) );
+			})
+			
+		});
+				
+		return false;
+	});
+	
+	$('#control1').change(function() {
+		$.getJSON($SCRIPT_ROOT + '/show_run_dates', {
+			company_id : {{ company.id }}, 
+			analyte_id : $('#qcrf_analyte').val(),
+			machine_id : $('#qcrf_machine').val(), 
+			rgt_lot_id : $(this).val()
+		}, function(data){
+			$.each(data.result, function(i, new_options){
+				$('#qc_1_run_date').append($('<p></p>').text(new_options[0]) );
 			})
 			
 		});
